# exegol-mcp

./: .gitignore  AD_Prompt.md  CLAUDE.md  README.md  claude-settings.json  config.yaml  exegol_mcp.py  exegol_mcp_old.py  pyproject.toml
.specify/memory/: constitution.md
exegol_mcp/: __init__.py  cli_wrappers.py  config.py  exceptions.py  handlers.py  logging_setup.py  main.py  models.py  output_parser.py  session_manager.py  utils.py  workflows.py
