[project]
name = "exegol-mcp-server"
version = "0.1.0"
description = "MCP server for Exegol container interaction"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
